blog/knative-istio/istio-routing-02.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: entry-route
  namespace: default
spec:
  gateways:
  - knative-ingress-gateway.knative-serving.svc.cluster.local
  hosts:
  - www.istio.missena.xyz
  http:
  - match:
    - headers:
        x-username:
          exact: gregory
      uri:
         prefix: "/"
    rewrite:
       authority: helloworld.default.example.com
    route:
    - destination:
        host: istio-ingressgateway.istio-system.svc.cluster.local
  - match:
    - uri:
        prefix: "/"
    rewrite:
      authority: helloworld-stable.default.example.com
    route:
      - destination:
          host: istio-ingressgateway.istio-system.svc.cluster.local
        weight: 100
