blog/knative-istio/route-stable.yaml
apiVersion: serving.knative.dev/v1alpha1
kind: Route
metadata:
  name: helloworld-stable
spec:
  traffic:
  - revisionName: helloworld-p57k2
    percent: 100
